--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
   <groupId>cn.club.springcloud</groupId>
   <artifactId>mscloud</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <modules>
+    <module>cloud-provider-payment</module>
+    <module>cloud-api.commons</module>
+  </modules>
   <packaging>pom</packaging>
 
   <!-- 统一管理jar包版本 -->
@@ -20,6 +24,8 @@
     <mysql.version>5.1.47</mysql.version>
     <druid.version>1.1.16</druid.version>
     <mybatis.spring.boot.version>1.3.0</mybatis.spring.boot.version>
+    <!--<swagger.annotations.version>2.0.0-rc2</swagger.annotations.version>-->
+    <swagger.ui.version>2.9.2</swagger.ui.version>
   </properties>
 
   <!-- 子模块继承之后，提供作用：锁定版本+子module不用写groupId和version -->
@@ -61,6 +67,25 @@
         <groupId>org.mybatis.spring.boot</groupId>
         <artifactId>mybatis-spring-boot-starter</artifactId>
         <version>${mybatis.spring.boot.version}</version>
+      </dependency>
+
+
+<!--      <dependency>
+        <groupId>io.swagger</groupId>
+        <artifactId>swagger-annotations</artifactId>
+        <version>${swagger.annotations.version}</version>
+      </dependency>-->
+
+      <dependency>
+        <groupId>io.springfox</groupId>
+        <artifactId>springfox-swagger2</artifactId>
+        <version>${swagger.ui.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>io.springfox</groupId>
+        <artifactId>springfox-swagger-ui</artifactId>
+        <version>${swagger.ui.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
