--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <version>1.0-SNAPSHOT</version>
   <modules>
     <module>cloud-provider-payment</module>
-    <module>cloud-api.commons</module>
+    <module>cloud-api-commons</module>
   </modules>
   <packaging>pom</packaging>
 
