--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,13 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>cn.club.springcloud</groupId>
+  <groupId>cn.cloud.springcloud</groupId>
   <artifactId>mscloud</artifactId>
   <version>1.0-SNAPSHOT</version>
   <modules>
     <module>cloud-provider-payment</module>
-    <module>cloud-api-commons</module>
+    <module>cloud-commons-api</module>
+      <module>cloud-consumer-order</module>
   </modules>
   <packaging>pom</packaging>
 
@@ -31,6 +32,7 @@
   <!-- 子模块继承之后，提供作用：锁定版本+子module不用写groupId和version -->
   <dependencyManagement>
     <dependencies>
+
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-dependencies</artifactId>
