--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <module>cloud-provider-payment</module>
     <module>cloud-commons-api</module>
       <module>cloud-consumer-order</module>
+      <module>cloud-eureka-server</module>
   </modules>
   <packaging>pom</packaging>
 
